A republisher to replay flights from rosbag
To use this feature, you must convert the ulog to rosbag manually,
and then by launching display.launch, a republisher will be started
automatically to subscribe topics, and then transform it into the
formate that rviz required.

--- a/src/tvmd/package.xml
+++ b/src/tvmd/package.xml
@@ -50,6 +50,8 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>px4_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
 
