--- a/src/tvmd/CMakeLists.txt
+++ b/src/tvmd/CMakeLists.txt
@@ -9,6 +9,7 @@ project(tvmd)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rospy
+  px4_msgs
 )
 
 ## System dependencies are found with CMake's conventions
